<resources>
    <string name="app_name">MyBreakingBook</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Passord?</string>
    <string name="register">Register Now</string>
    <string name="login"> Login</string>
    <string name="subtitle"> For the Bboys and Bgirls</string>
    <string name="email"> Email</string>
    <string name="age"> Age</string>
    <string name="signup"> Register User</string>
    <string name="artistname"> Artist Name</string>

</resources>